# KIUI

./: .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  README_EN.md  build.ps1  clean-build.ps1  generate_clangd_config.ps1
SDK/include/foundation/: logger.hpp  window.hpp  window_class.hpp
SDK/include/graphics/: Rectangle.hpp  RenderContext.hpp  Shapes.hpp
SDK/include/widget/: EventRoute.hpp  RoutedEventArgs.hpp  SceneRenderer.hpp  UIElement.hpp  VisualElement.hpp
SDK/lib/: Graphics.lib  Widget.lib
SDK/lib/Debug/: TracyClient.lib
foundation/: CMakeLists.txt
foundation/examples/: two_windows.cpp
foundation/src/: logger.cpp  window.cpp  window_manager.cpp
foundation/src/hpps/: logger.hpp  window.hpp  window_class.hpp
foundation/tests/: test_window_focus.cpp  test_window_manager.cpp
graphics/: CMakeLists.txt
graphics/examples/: draw_triangle.cpp
graphics/include/: RenderContext.hpp  RenderSurface.hpp
graphics/src/: Rectangle.cpp  RenderContext.cpp  RenderSurface.cpp  Shapes.cpp
widget/: CMakeLists.txt
widget/examples/: layout_test.cpp
widget/include/: Box.hpp  EventRoute.hpp  UIElement.hpp  VisualElement.hpp  clock.hpp
widget/src/: Box.cpp  SceneRenderer.cpp  UIElement.cpp  VisualElment.cpp  clock.cpp
widget/tests/: test_hittest.cpp
